Fixed modal avatar size + CSS spacing

--- a/mod_shoutbox/media/css/mod_shoutbox.css
+++ b/mod_shoutbox/media/css/mod_shoutbox.css
@@ -17,18 +17,18 @@
 .jjshoutbox > div,
 .jjshoutbox textarea,
 .jjshoutbox input {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 .jjshoutboxform textarea {
-    width: 100%;
-    margin: 0;
+	width: 100%;
+	margin: 0;
 	resize: vertical;
 }
 .jjshoutboxform .fullwidth {
-    margin-top: 5px;
-    color: #000;
-    width: 100%;
-    min-height: 30px;
+	margin-top: 5px;
+	color: #000;
+	width: 100%;
+	min-height: 30px;
 }
 .jjshoutboxform .mass_delete {
 	margin-top: 20px;
@@ -37,29 +37,29 @@
 	margin-top: 0;
 }
 .jjshoutboxform p {
-    margin: 4px 0;
+	margin: 4px 0;
 }
 .jjshoutboxoutput {
-    width: 100%;
-    border-style: solid;
-    background: #FFFFFF;
-    overflow: auto;
-    margin-top: 5px;
-    word-wrap: break-word;
+	width: 100%;
+	border-style: solid;
+	background: #FFFFFF;
+	overflow: auto;
+	margin-top: 5px;
+	word-wrap: break-word;
 	margin-bottom: 10px;
 }
 .jjshoutboxoutput input[type=submit] {
-    cursor: pointer;
-    text-align: center;
-    font-family: inherit;
+	cursor: pointer;
+	text-align: center;
+	font-family: inherit;
 	font-weight: bold;
 	font-size: 10px;
-    text-decoration: none;
-    background: none;
-    padding: 0;
-    margin: 0;
-    border: 0;
-    height: 15px;
+	text-decoration: none;
+	background: none;
+	padding: 0;
+	margin: 0;
+	border: 0;
+	height: 15px;
 	vertical-align: top;
 }
 .jjshoutboxoutput .shout-actions {
@@ -72,34 +72,34 @@
 	margin: 0;
 }
 .shout-actions .shout-remove {
-    background: none;
-    border: 0;
-    line-height: 13px;
-    margin: 0;
-    padding: 3px 0 0;
-    vertical-align: top;
+	background: none;
+	border: 0;
+	line-height: 13px;
+	margin: 0;
+	padding: 3px 0 0;
+	vertical-align: top;
 	cursor: pointer;
 }
 .jjshoutboxoutput .shout-header {
-    font-family: inherit;
-    font-size: 12px;
+	font-family: inherit;
+	font-size: 12px;
 	font-weight: bold;
-    text-transform: none;
-    margin: 8px 0 0;
+	text-transform: none;
+	margin: 8px 0 0;
 	padding: 0 35px 0 5px;
-    height: auto;
-    line-height: 20px;
+	height: auto;
+	line-height: 20px;
 	position: relative;
 }
 .jjshoutboxoutput div form {
-    display: inline-block;
-    margin: 0;
+	display: inline-block;
+	margin: 0;
 }
 .jjshoutboxoutput div p {
-    font-size: 11px;
-    font-family: inherit;
-    text-align: left;
-    margin: 5px 0 10px;
+	font-size: 11px;
+	font-family: inherit;
+	text-align: left;
+	margin: 5px 0 10px;
 	padding: 0 0 0 5px;
 }
 #noguest {
@@ -144,14 +144,14 @@
 	list-style: none;
 }
 .jj_smiley {
-    border: none;
+	border: none;
 	cursor: pointer;
 	display: block;
-    float: left;
-    margin: 0 3px 5px 0;
+	float: left;
+	margin: 0 3px 5px 0;
 }
 .jj_smiley:hover {
-    background: none !important;
+	background: none !important;
 	border: 0;
 	outline: 0;
 }
@@ -159,15 +159,15 @@
 	padding: 4px 0px;
 }
 .jjshoutbox-audio {
-    display: none;
+	display: none;
 }
 a.edit-cancel,
 a.edit-cancel.btn,
 .uk-button.edit-cancel {
-    display: none;
+	display: none;
 	width: 100%;
 	margin-top: 5px;
-    min-height: 30px;
+	min-height: 30px;
 	box-sizing: border-box;
 }
 
@@ -197,11 +197,11 @@ Shoutbox history
 }
 .jj-shout-history > div {
 	background-color: #f5f5f5;
-    border: 1px solid #e3e3e3;
-    border-radius: 4px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
-    margin-bottom: 20px;
-    min-height: 20px;
+	border: 1px solid #e3e3e3;
+	border-radius: 4px;
+	box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05) inset;
+	margin-bottom: 20px;
+	min-height: 20px;
 	padding: 5px 9px;
 	overflow-x: auto;
 }
@@ -225,21 +225,25 @@ Shoutbox history
 .jj-shout-history form input[type="submit"] {
 	background: none;
 	border: 0 none;
-    cursor: pointer;
-    font-family: inherit;
-    font-size: 15px;
-    font-weight: bold;
-    height: 20px;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    text-decoration: none;
-    vertical-align: top;
+	cursor: pointer;
+	font-family: inherit;
+	font-size: 15px;
+	font-weight: bold;
+	height: 20px;
+	margin: 0;
+	padding: 0;
+	text-align: center;
+	text-decoration: none;
+	vertical-align: top;
 }
 #jj-shout-history .shout-header {
 	font-weight: bold;
 	color: #000;
 	background: none;
+}
+.jj-shout-history .avatar img {
+	width: 30px;
+	height: 30px;
 }
 
 /**
@@ -251,7 +255,7 @@ Non-bootstrap styling for BBCode
 .jjshoutbox .btn-group .btn {
 	cursor: pointer;
 	min-width: 30px;
-    padding: 2px 7px;
+	padding: 2px 7px;
 }
 
 /**
